<resources>
    <string name="app_name">PSM</string>
    <string name="title_activity_flight_planner">FlightPlannerActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="placeholder_card_date">10/29</string>
    <string name="placeholder_card_name">John Doe</string>
    <string name="placeholder_card_number">**** **** **** 1234</string>
    <string name="search_for_your_next_holiday">Search for your next holiday</string>
    <string name="submit">Submit</string>
    <string name="reset">reset</string>
    <string name="flying_from">Flying From</string>
    <string name="destination">Destination</string>
    <string name="when">When</string>
    <string name="nights">Nights</string>
    <string name="no_of_adults">No. of Adults</string>
    <string name="no_of_children">No. of Children</string>
    <string name="download_profile">Download Profile</string>
    <string name="logout">Logout</string>
    <string name="delete_account_and_all_information">Delete Account and all information</string>

    <!--  Make me a string array of country  -->
    <string-array name="country_names">
        <item>Please Select</item>
        <item>United States</item>
        <item>Canada</item>
        <item>Mexico</item>
        <item>Brazil</item>
        <item>United Kingdom</item>
        <item>France</item>
        <item>Germany</item>
        <item>Italy</item>
        <item>Spain</item>
        <item>Netherlands</item>
        <item>Belgium</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Russia</item>
        <item>China</item>
        <item>Japan</item>
        <item>South Korea</item>
        <item>India</item>
        <item>Australia</item>
        <item>New Zealand</item>
        <item>South Africa</item>
        <item>Egypt</item>
        <item>Turkey</item>
        <item>Saudi Arabia</item>
        <item>United Arab Emirates</item>
        <item>Israel</item>
        <item>Iran</item>
        <item>Singapore</item>
        <item>Indonesia</item>
        <item>Malaysia</item>
        <item>Thailand</item>
        <item>Argentina</item>
    </string-array>
</resources>