<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="4dp"
    android:padding="12dp">

    <FrameLayout
        android:id="@+id/newscard_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_card_number"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_card_name"
                    android:textSize="20sp"
                    android:layout_marginEnd="40dp"/>

                <TextView
                    android:id="@+id/card_expiry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_card_date"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/card_info_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00F9AA7C"
            android:layout_weight="1"
            android:visibility="gone"
            android:src="@drawable/ic_checkmark" />

        <ImageButton
            android:id="@+id/card_info_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00F9AA7C"
            android:layout_weight="1"
            android:src="@drawable/ic_bin" />


    </LinearLayout>

</LinearLayout>
