<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:fitsSystemWindows="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/flightPlannerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:fitsSystemWindows="false">

        <!--  Flight planner  -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/flightPlannerHeader"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/cardview_background"
                android:clipToOutline="true"
                android:outlineProvider="background"
                android:scaleType="centerCrop"
                android:src="@drawable/fligher_planner_header" />

            <LinearLayout
                android:id="@+id/flightPlannerFields"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="45dp"
                android:orientation="vertical">

                <!-- Fling From -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rounded_action_bar">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_plane_filled_small"/>

                    <Spinner
                        android:id="@+id/flightPlanner_From"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/flying_from"
                        />
                </LinearLayout>

                <!-- Fliyng To -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rounded_action_bar">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_building"/>

                    <Spinner
                        android:id="@+id/flightPlanner_Destination"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/destination"
                        />
                </LinearLayout>

                <!-- Departure Date -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_marginEnd="10dp"
                        android:paddingHorizontal="10dp"
                        android:background="@drawable/rounded_action_bar">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_calender"/>

                        <EditText
                            android:id="@+id/flightPlanner_DepartureDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/when"
                            android:focusable="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp"
                        android:background="@drawable/rounded_action_bar">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_bed"/>

                        <EditText
                            android:id="@+id/flightPlanner_lengthOfStay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:hint="@string/nights"
                            />
                    </LinearLayout>

                </LinearLayout>

                <!-- Passengers -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_marginEnd="10dp"
                        android:paddingHorizontal="10dp"
                        android:background="@drawable/rounded_action_bar">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_person"/>

                        <EditText
                            android:id="@+id/flightPlanner_passengerAdults"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/no_of_adults"
                            android:inputType="number"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp"
                        android:background="@drawable/rounded_action_bar">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_child"/>

                        <EditText
                            android:id="@+id/flightPlanner_passengerChildren"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/no_of_children"
                            android:inputType="number"
                            />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/flightPlannerSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button_price"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:text="@string/submit"/>

                    <Button
                        android:id="@+id/flightPlannerReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:background="@android:color/transparent"

                        android:text="@string/reset"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/flightPlannerSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/rounded_action_bar"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_search_blue" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/seperator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/flightPlannerSearchText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/search_for_your_next_holiday"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/flightPlannerSearchTextFrom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="From"
                            android:textColor="@color/dark_blue"
                            android:textSize="12sp" />

                        <View
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/ic_dot" />

                        <TextView
                            android:id="@+id/flightPlannerSearchTextTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="Where"
                            android:textColor="@color/dark_blue"
                            android:textSize="12sp" />

                        <View
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/ic_dot" />

                        <TextView
                            android:id="@+id/flightPlannerSearchTextWhen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="When"
                            android:textColor="@color/dark_blue"
                            android:textSize="12sp" />

                        <View
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/ic_dot" />

                        <TextView
                            android:id="@+id/flightPlannerSearchTextWho"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Who"
                            android:textColor="@color/dark_blue"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/resultsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:text="Today's Top Destinations:"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flightPlannerRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/resultsText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>